Fix wrong tick symbol

--- a/App/src/main/resources/com/gluonhq/chat/views/chat.css
+++ b/App/src/main/resources/com/gluonhq/chat/views/chat.css
@@ -87,6 +87,8 @@
 }
 
 .chat-message-status {
+    -fx-font-family: "FontAwesome";
+    -fx-font-size: 0.8em;
     -fx-text-fill: -chart-light-text-fill;
 }
 
