Update versions, use AttachConfig Remove JavaFaker dependency Add custom time format

--- a/App/src/main/resources/com/gluonhq/chat/views/chat.css
+++ b/App/src/main/resources/com/gluonhq/chat/views/chat.css
@@ -86,6 +86,11 @@
     -fx-padding: 25 10 0 0;
 }
 
+.chat-message-date {
+    -fx-font-size: 0.8em;
+    -fx-text-fill: -chart-light-text-fill;
+}
+
 .chat-message-status {
     -fx-font-family: "FontAwesome";
     -fx-font-size: 0.8em;
