--- a/App/src/main/resources/com/gluonhq/chat/views/chat.css
+++ b/App/src/main/resources/com/gluonhq/chat/views/chat.css
@@ -69,21 +69,25 @@
 
 .chat-message-text {
     -fx-background-color: -chat-light-color;
-    -fx-padding: 20;
-    -fx-background-radius: .7em;
+    -fx-padding: 10;
+    -fx-background-radius: 0 .7em .7em .7em;
+}
+
+.chat-message-bubble:right .chat-message-text {
+    -fx-background-radius: .7em 0 .7em .7em;
 }
 
 .chat-message-text > .text {
     -fx-fill: -chart-dark-text-fill;
 }
 
-.chat-message-text-handle {
-    -fx-padding: 25 0 0 10;
+.chat-message-bubble .chat-message-text-handle {
+    -fx-padding: 10 0 0 10;
     -fx-alignment: top-right;
 }
 
-.chat-message-text-handle:right {
-    -fx-padding: 25 10 0 0;
+.chat-message-bubble:right .chat-message-text-handle {
+    -fx-padding: 10 10 0 0;
 }
 
 .chat-message-date {
@@ -105,18 +109,18 @@
     -fx-border-radius: 35;
     -fx-background-radius: 35;
     -fx-alignment: top-right;
-    -fx-padding: 20;
-    -fx-font-size: 1.3em;
+    -fx-padding: 15;
+    -fx-font-size: 0.8em;
     -fx-font-weight: bold;
 }
 
-.outter-box {
+.outer-box {
     -fx-padding: 2 10 2 10;
     -fx-alignment: CENTER;
     -fx-max-height: 40;
 }
 
-.outter-box > .unread-box {
+.outer-box > .unread-box {
     -fx-background-color: -unread-color;
     -fx-background-radius: 10;
     -fx-effect: dropshadow(three-pass-box, #00000050, 2, 0, 0, 2);
@@ -126,16 +130,16 @@
     -fx-alignment: CENTER;
 }
 
-.outter-box > .unread-box:hover {
+.outer-box > .unread-box:hover {
     -fx-background-color: -unread-color-hover;
 }
 
-.outter-box > .unread-box > .label.unread {
+.outer-box > .unread-box > .label.unread {
     -fx-font-size: 1.2em;
     -fx-text-fill: white;
 }
 
-.outter-box > .unread-box > .label.go-bottom {
+.outer-box > .unread-box > .label.go-bottom {
     -fx-font-family: "FontAwesome";
     -fx-font-size: 1.5em;
     -fx-text-fill: white;
