--- a/App/src/main/resources/styles.css
+++ b/App/src/main/resources/styles.css
@@ -18,7 +18,7 @@
     -chart-dark-text-fill : #818181;
     -chart-light-text-fill: #f4fdff;
 
-    -fx-font-size: 1.15em;
+    -fx-font-size: 12pt;
 
     -unread-label: #f17835;
     -unread-color: #f17835cc;
