--- a/App/src/main/resources/com/gluonhq/chat/views/chat.fxml
+++ b/App/src/main/resources/com/gluonhq/chat/views/chat.fxml
@@ -34,10 +34,13 @@
                     </BorderPane.margin></Button>
             </left>
             <right>
-                <Button fx:id="sendButton" mnemonicParsing="false" styleClass="chat-button" text="%button.send.text" BorderPane.alignment="CENTER">
+                <HBox>
+                    <Button fx:id="emojiButton" mnemonicParsing="false" styleClass="chat-button" text="%button.emoji.text" BorderPane.alignment="CENTER"/>
+                    <Button fx:id="sendButton" mnemonicParsing="false" styleClass="chat-button" text="%button.send.text" BorderPane.alignment="CENTER"/>
                     <BorderPane.margin>
                         <Insets left="10.0" />
-                    </BorderPane.margin></Button>
+                    </BorderPane.margin>
+                </HBox>
             </right>
         </BorderPane>
     </bottom>
