Move chat stylesheets to its own file (#40)

--- a/App/src/main/resources/styles_dark.css
+++ b/App/src/main/resources/styles_dark.css
@@ -19,3 +19,7 @@
     -unread-color: rgba(119, 45, 4, 0.8);
     -unread-color-hover: rgba(147, 32, 4, 0.8);
 }
+
+.label {
+    -fx-text-fill: -chart-light-text-fill;
+}
