--- a/App/src/main/resources/com/gluonhq/chat/views/helper/poi.css
+++ b/App/src/main/resources/com/gluonhq/chat/views/helper/poi.css
@@ -1,7 +1,7 @@
 .marker-container > .marker {
-    -fx-text-fill: -chart-light-text-fill;
-    -fx-background-color: -chat-dark-color;
-    -fx-border-color: -chat-light-color;
+    -fx-text-fill: -chat-text-fill-light;
+    -fx-background-color: -chat-accent-dark;
+    -fx-border-color: -chat-accent-light;
     -fx-shape: "M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535 13.774-29.93 13.773-39.464 0z";
     -fx-pref-width: 3.2em;
     -fx-pref-height: 4em;
