--- a/EmojiTextArea/src/main/resources/com/gluonhq/emoji/control/emoji-text-area.css
+++ b/EmojiTextArea/src/main/resources/com/gluonhq/emoji/control/emoji-text-area.css
@@ -12,10 +12,9 @@
 
 .emoji-text-area > .emoji-button > .icon {
     /**
-     * The following SVGs is from Font Awesome - https://fontawesome.com
-     * https://fontawesome.com/icons/grin?style=regular
+     * The following SVGs is from Font Awesome - https://fontawesome.com/v5.15/icons/smile?style=regular
      */
-    -fx-shape: "M248 8C111 8 0 119 0 256s111 248 248 248 248-111 248-248S385 8 248 8zm0 448c-110.3 0-200-89.7-200-200S137.7 56 248 56s200 89.7 200 200-89.7 200-200 200zm105.6-151.4c-25.9 8.3-64.4 13.1-105.6 13.1s-79.6-4.8-105.6-13.1c-9.9-3.1-19.4 5.4-17.7 15.3 7.9 47.1 71.3 80 123.3 80s115.3-32.9 123.3-80c1.6-9.8-7.7-18.4-17.7-15.3zM168 240c17.7 0 32-14.3 32-32s-14.3-32-32-32-32 14.3-32 32 14.3 32 32 32zm160 0c17.7 0 32-14.3 32-32s-14.3-32-32-32-32 14.3-32 32 14.3 32 32 32z";
+    -fx-shape: "M248 8C111 8 0 119 0 256s111 248 248 248 248-111 248-248S385 8 248 8zm0 448c-110.3 0-200-89.7-200-200S137.7 56 248 56s200 89.7 200 200-89.7 200-200 200zm-80-216c17.7 0 32-14.3 32-32s-14.3-32-32-32-32 14.3-32 32 14.3 32 32 32zm160 0c17.7 0 32-14.3 32-32s-14.3-32-32-32-32 14.3-32 32 14.3 32 32 32zm4 72.6c-20.8 25-51.5 39.4-84 39.4s-63.2-14.3-84-39.4c-8.5-10.2-23.7-11.5-33.8-3.1-10.2 8.5-11.5 23.6-3.1 33.8 30 36 74.1 56.6 120.9 56.6s90.9-20.6 120.9-56.6c8.5-10.2 7.1-25.3-3.1-33.8-10.1-8.4-25.3-7.1-33.8 3.1z";
     -fx-background-color: grey;
     -fx-min-width: 24px ;
     -fx-pref-width: 24px ;
@@ -23,11 +22,6 @@
     -fx-min-height: 24px ;
     -fx-pref-height: 24px ;
     -fx-max-height: 24px ;
-}
-
-.emoji-text-area > .emoji-button:hover > .icon {
-    -fx-scale-x: 1.05;
-    -fx-scale-y: 1.05;
 }
 
 /* TODO: Background radius property is not applied.
