Login via QR code (#46)

--- a/App/src/main/resources/com/gluonhq/chat/views/login.css
+++ b/App/src/main/resources/com/gluonhq/chat/views/login.css
@@ -1,29 +1,26 @@
 .box {
     -fx-padding: 20;
     -fx-spacing: 20;
-    -fx-alignment: TOP_CENTER;
+    -fx-alignment: CENTER;
 }
 
-.label {
-    -fx-font-size: 1.3em;
+.header {
+    -fx-font-size: 1.2em;
+    -fx-font-weight: bold;
 }
 
-.text-field {
-    -fx-font-size: 1.4em;
+.text-box {
+    -fx-alignment: CENTER;
 }
 
-.button {
-    -fx-font-size: 1.25em;
+.text-box > .label {
+    -fx-font-size: 0.9em;
 }
 
-.top {
-    -fx-pref-height: 3mm;
+.text-box > .icon {
+    -fx-padding: 10px;
 }
 
-.top.ios {
-    -fx-pref-height: 5.6mm;
-}
-
-.top.ios.notch {
-    -fx-pref-height: 11.52mm;
+.text-box > .icon > .label {
+    -fx-font-size: 2em;
 }
