--- a/App/src/main/resources/com/gluonhq/chat/views/login.fxml
+++ b/App/src/main/resources/com/gluonhq/chat/views/login.fxml
@@ -1,33 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.gluonhq.charm.glisten.control.Icon?>
-<?import com.gluonhq.charm.glisten.mvc.View?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
+<?import com.gluonhq.charm.glisten.control.*?>
+<?import com.gluonhq.charm.glisten.mvc.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
 
-<View fx:id="loginView" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gluonhq.chat.views.LoginPresenter">
-    <center>
-        <VBox alignment="TOP_CENTER" spacing="20.0" styleClass="box" BorderPane.alignment="CENTER">
-            <children>
-                <Label fx:id="label" text="%label.text.1" textAlignment="CENTER" />
-                <TextField fx:id="username" styleClass="text-field" promptText="Username"/>
-                <Button fx:id="button" mnemonicParsing="false" text="%button.text">
-                    <graphic>
-                        <Icon content="LANGUAGE" />
-                    </graphic>
-                </Button>
-            </children>
+<View fx:id="loginView" styleClass="login-view" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gluonhq.chat.views.LoginPresenter">
+    <VBox fx:id="box" styleClass="box">
+        <Label fx:id="header" styleClass="header" text="Link your phone to Signal Desktop" />
+        <ImageView>
+            <Image url="@/qr.png" />
+        </ImageView>
+        <GridPane styleClass="text-box" hgap="2.0" vgap="2.0">
+             <Icon content="ANDROID" GridPane.rowSpan="3" />
+             <Icon content="ADD_CIRCLE" GridPane.columnIndex="2" GridPane.rowSpan="3">
             <padding>
-                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-            </padding>
-        </VBox>
-    </center>
-    <top>
-        <Pane fx:id="top" prefHeight="0.0" styleClass="top" BorderPane.alignment="CENTER" />
-    </top>
+               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+            </padding></Icon>
+             <Label text="Signal Settings" GridPane.columnIndex="1" />
+             <Label text="Linked Devices" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+             <Label text="'+' Button" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+             <Label text="Signal Settings" GridPane.columnIndex="3" />
+             <Label text="Linked Devices" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+             <Label text="Link New Device" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+        </GridPane>
+    </VBox>
 </View>
