--- a/App/src/main/resources/com/gluonhq/chat/views/channel.css
+++ b/App/src/main/resources/com/gluonhq/chat/views/channel.css
@@ -47,3 +47,19 @@ leads it to covering the entire width **/
 .landscape-view .channel-list {
     -fx-max-width: 250px;
 }
+
+.list-tile > .primary-graphic {
+    -fx-font-size: 1em;
+    -fx-pref-width: 10mm;
+    -fx-pref-height: 10mm;
+}
+
+.channel-icon {
+    -fx-text-fill: -chat-text-fill;
+    -fx-background-color: -chat-background;
+    -fx-border-radius: 50;
+    -fx-background-radius: 50;
+    -fx-alignment: center;
+    -fx-padding: 6;
+    -fx-font-weight: normal;
+}
