Add avatar and cache images (#79)
Co-authored-by: jose.pereda <jose.pereda@gluonhq.com>

--- a/App/src/main/resources/com/gluonhq/chat/views/channel.css
+++ b/App/src/main/resources/com/gluonhq/chat/views/channel.css
@@ -63,3 +63,12 @@ leads it to covering the entire width **/
     -fx-padding: 6;
     -fx-font-weight: normal;
 }
+
+.avatar {
+    -charm-radius: 5mm;
+}
+
+.avatar > .decoration {
+    -fx-fill: transparent;
+    -fx-stroke: transparent;
+}
